--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,10 @@ workflows:
   version: 2
   dockerfile_wizard:
     jobs:
+      - build:
+          context: org-global
 
       - test_image:
+          context: org-global
           requires:
             - build
